-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.7.1, Qt Creator 4.7.2
-
None
-
3cef77db8642539f37df625520f59623688ae889 (qt-creator/qt-creator/4.8)
Pressing pause when running a debuggable program causes a crash notification. See attached screenshot.
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTCREATORBUG-21351 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 245066,2 | Debugger: Ignore bogus signal number on QNX | 4.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |