Debugger: Ignore bogus signal number on QNX

Fixes: QTCREATORBUG-21351
Change-Id: Id2b45e830f860a9352aacbbd5f6932d8fcde7b26
Reviewed-by: Sami Nurmenniemi <sami.nurmenniemi@qt.io>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>